--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,17 @@
+body{
+  width: 960px;
+}
+#external-links{
+  float: left;
+  display: inline-block;
+  vertical-align: top;
+  width: 200px;
+}
+main{
+  display: inline-block;
+  vertical-align: top;
+  width: 756px;
+}
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -15,7 +29,7 @@ cite {
 }
 
 /* you're welcome to edit the
-image, figure, and figcaption CSS if you'd like, 
+image, figure, and figcaption CSS if you'd like,
 but it's optional! */
 img {
   width: 100%;
