--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -46,3 +46,22 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
+@media screen and (max-width: 500px){
+  main > h1{
+    font-size: 1.2em;
+  }
+  #external-links{
+    width: 100%;
+  }
+  main{
+    width: 100%;
+  }
+}
+
+/*
+@media screen and (max-width: 500px){
+  body{
+    background-color: hotpink;
+  }
+}
+*/
